--- a/Shop/landing/app/index.html
+++ b/Shop/landing/app/index.html
@@ -263,12 +263,9 @@
       <div id="how_it_works">
         <div class="container">
           <div class="land_container">
-            <span class="how_title">Условия акции:</span>
+            <span class="how_title">Пять дней супер скидок –<br> Черная Пятница стартовала!</span>
             <div class="how_content">
-              <p>При покупке сантехники в нашем интернет-магазине на сумму более 50 000 рублей <br>
-                <strong>Вы получаете подарочный сертификат в магазин "Детский мир".</strong></p>
-              <p>Данный сертификат дает право на покупку товаров для школы на сумму 3 000 рублей в розничной сети магазинов<br> "Детский мир". Полный перечень магазинов вы можете посмотреть на <a href="#">официальном сайте</a> сети.</p>
-              <p>Срок проведения акцииc 15 по 31 августа.</p>
+              <p>Команда интернет-магазина Сатра сообщает о начале распродажи «Черная Пятница»! С 22 по 26 ноября вы сможете приобрести товары с честными скидками. Никаких завышенных цен и выдуманных скидок - все максимально открыто и неимоверно выгодно для Вас! Торопитесь - количество акционных товаров ограничено.</p>
               <span class="sub">В акции участвуют все группы товаров</span>
             </div>
           </div>
@@ -279,18 +276,19 @@
           <div class="land_container">
             <!--Секция1-->
             <div class="title"><span class="title_txt">Инсталляции</span></div>
-            <div class="block_container">
+            <div class="block_container product_container">
               <div class="block">
                 <a href="/geberit/sistema_installyacii_dlya_unitazov_geberit_duofix_delta_458_124_21_1_3_v_1_s_knopkoj_smyva/">
                   <span class="img_block">
                     <img src="/images/cms/thumbs/a8346cefed284da7092090177aa4279fc9f25323/installyacii_geberit_duofix_3_v_1_s_knopkoy_smyva_n0000018178_0_auto_400_5_92.jpg" alt="">
                   </span>
+                  <span class="price">
+                    <span class="old_price">13 500</span>
+                    <span class="current_price">8 100<span class="rub">руб.</span></span>
+                    <span class="discount">-40%</span>
+                  </span>
                   <span class="title_block">
                     <span class="name">Система инсталляции для унитазов Geberit Duofix Delta 458.124.21.1 3 в 1</span>
-                    <span class="price">
-                      <span class="old_price">13 500</span>
-                      <span class="current_price">8 350<span class="rub">руб.</span></span>
-                    </span>
                   </span>
                 </a>
               </div>
@@ -303,7 +301,8 @@
                     <span class="name">Система инсталляции для унитазов Grohe Rapid SL 38721001 3 в 1</span>
                     <span class="price">
                       <span class="old_price">13 478</span>
-                      <span class="current_price">13 280<span class="rub">руб.</span></span>
+                      <span class="current_price">8 086<span class="rub">руб.</span></span>
+                      <span class="discount">-40%</span>
                     </span>
                   </span>
                 </a>
@@ -316,7 +315,9 @@
                   <span class="title_block">
                     <span class="name">Система инсталляции для унитазов Geberit Duofix UP320 111.300.00.5</span>
                     <span class="price">
-                      <span class="current_price">12 000<span class="rub">руб.</span></span>
+                      <span class="old_price">12 000</span>
+                      <span class="current_price">9 600<span class="rub">руб.</span></span>
+                      <span class="discount">-20%</span>
                     </span>
                   </span>
                 </a>
@@ -324,12 +325,12 @@
             </div>
             <div class="block_button">
               <span class="link">
-                <a href="#">смотреть все</a>
+                <a href="/installyacii/sale/">смотреть все</a>
               </span>
             </div>
             <!--Секция2-->
             <div class="title"><span class="title_txt">Унитазы</span></div>
-            <div class="block_container">
+            <div class="block_container product_container">
               <div class="block">
                 <a href="/cersanit/unitaz-kompakt_cersanit_parva_new_clean_on_s_mikroliftom1/">
                   <span class="img_block">
@@ -340,6 +341,7 @@
                     <span class="price">
                       <span class="old_price">7 499</span>
                       <span class="current_price">4 970<span class="rub">руб.</span></span>
+                      <span class="discount">-34%</span>
                     </span>
                   </span>
                 </a>
@@ -354,6 +356,7 @@
                     <span class="price">
                       <span class="old_price">6 599</span>
                       <span class="current_price">4 699<span class="rub">руб.</span></span>
+                      <span class="discount">-29%</span>
                     </span>
                   </span>
                 </a>
@@ -367,7 +370,8 @@
                     <span class="name">Подвесной унитаз CeramaLux TR2196</span>
                     <span class="price">
                       <span class="old_price">14 300</span>
-                      <span class="current_price">10 800<span class="rub">руб.</span></span>
+                      <span class="current_price">10 010<span class="rub">руб.</span></span>
+                      <span class="discount">-30%</span>
                     </span>
                   </span>
                 </a>
@@ -375,14 +379,14 @@
             </div>
             <div class="block_button">
               <span class="link">
-                <a href="#">смотреть все</a>
+                <a href="/unitazy/sale/">смотреть все</a>
               </span>
             </div>
             <!--Секция3-->
             <div class="title"><span class="title_txt">Смесители</span></div>
             <div class="block_container brand_container">
               <div class="block">
-                <a href="#">
+                <a href="/smesiteli/grohe/">
                   <span class="img_block">
                     <img src="/images/brands/grohe.jpg" alt="Grohe">
                   </span>
@@ -394,7 +398,7 @@
                 </a>
               </div>
               <div class="block">
-                <a href="#">
+                <a href="/smesiteli/hansgrohe/">
                   <span class="img_block">
                     <img src="/images/brands/hansgrohe.jpg" alt="Hansgrohe">
                   </span>
@@ -406,7 +410,7 @@
                 </a>
               </div>
               <div class="block">
-                <a href="#">
+                <a href="/smesiteli/lemark/">
                   <span class="img_block">
                     <img src="/images/brands/lemark.jpg" alt="Lemark">
                   </span>
@@ -420,14 +424,14 @@
             </div>
             <div class="block_button">
               <span class="link">
-                <a href="#">смотреть все</a>
+                <a href="/smesiteli/sale/">смотреть все</a>
               </span>
             </div>
             <!--Секция4-->
             <div class="title"><span class="title_txt">Ванны</span></div>
             <div class="block_container brand_container">
               <div class="block">
-                <a href="#">
+                <a href="/vanny/mramor/astra-form/">
                   <span class="img_block">
                     <img src="https://ruslanmmr.github.io/Shop/landing/app/img/astra-form.png" alt="astra-form">
                   </span>
@@ -439,7 +443,7 @@
                 </a>
               </div>
               <div class="block">
-                <a href="#">
+                <a href="/vanny/akrilovye/excellent/">
                   <span class="img_block">
                     <img src="/images/brands/excellent.jpg" alt="Excellent">
                   </span>
@@ -451,7 +455,7 @@
                 </a>
               </div>
               <div class="block">
-                <a href="#">
+                <a href="/vanny/mramor/marmo_bagno/">
                   <span class="img_block">
                     <img src="https://ruslanmmr.github.io/Shop/landing/app/img/marmo-bagno-logo.jpg" alt="marmo-bagno">
                   </span>
@@ -465,14 +469,14 @@
             </div>
             <div class="block_button">
               <span class="link">
-                <a href="#">смотреть все</a>
+                <a href="/vanny/sale/">смотреть все</a>
               </span>
             </div>
             <!--Секция5-->
             <div class="title"><span class="title_txt">Стойки</span></div>
             <div class="block_container brand_container">
               <div class="block">
-                <a href="#">
+                <a href="/dush/stojki/adiante/">
                   <span class="img_block">
                     <img src="/images/adiante/adiante_logo.jpg" alt="Adiante">
                   </span>
@@ -484,7 +488,7 @@
                 </a>
               </div>
               <div class="block">
-                <a href="#">
+                <a href="/dush/stojki/hansgrohe/">
                   <span class="img_block">
                     <img src="/images/brands/hansgrohe.jpg" alt="Hansgrohe">
                   </span>
@@ -496,7 +500,7 @@
                 </a>
               </div>
               <div class="block">
-                <a href="#">
+                <a href="/dush/stojki/?&filter[brand][]=1887772&is_filtered=1">
                   <span class="img_block">
                     <img src="https://ruslanmmr.github.io/Shop/landing/app/img/bronze_delux.png" alt="bronze_delux">
                   </span>
@@ -510,14 +514,14 @@
             </div>
             <div class="block_button">
               <span class="link">
-                <a href="#">смотреть все</a>
+                <a href="/dush/stojki/">смотреть все</a>
               </span>
             </div>
             <!--Секция6-->
             <div class="title"><span class="title_txt">Аксессуары</span></div>
             <div class="block_container brand_container">
               <div class="block">
-                <a href="#">
+                <a href="/aksessuary/fbs/">
                   <span class="img_block">
                     <img src="/images/brands/fbs.jpg" alt="FBS">
                   </span>
@@ -529,7 +533,7 @@
                 </a>
               </div>
               <div class="block">
-                <a href="#">
+                <a href="/aksessuary/artwelle/">
                   <span class="img_block">
                     <img src="/images/brands/artwelle.jpg" alt="Artwelle">
                   </span>
@@ -541,7 +545,7 @@
                 </a>
               </div>
               <div class="block">
-                <a href="#">
+                <a href="/aksessuary/wasserkraft/">
                   <span class="img_block">
                     <img src="https://ruslanmmr.github.io/Shop/landing/app/img/Wasserkraft.jpg" alt="Wasserkraft ">
                   </span>
@@ -555,7 +559,7 @@
             </div>
             <div class="block_button">
               <span class="link">
-                <a href="#">смотреть все</a>
+                <a href="/aksessuary/sale/">смотреть все</a>
               </span>
             </div>
           </div>
@@ -702,26 +706,40 @@
   <script type="text/javascript" src="/templates/satra/js/jquery.fixedtable.js"></script>
   <script type="text/javascript" src="/templates/satra/js/eskju.jquery.scrollflow.min.js"></script>
   <script type="text/javascript" src="/templates/satra/js/main.js?2"></script>
-  <!--Timer script-->
+  <!--new script-->
   <script type="text/javascript" src="https://ruslanmmr.github.io/Shop/landing/app/countdown.js"></script>
   <script>
     $(document).ready(function(){
-      setTimeout(function() {
-        $(".top_content").addClass("visible_timer");
-       }, 500);
-      $("#countdown").countdown({
-      date: "22 november 2018 00:00:01",
-      format: "on"
-      },
-      function() {
-         $(".time_txt").text("До окончания акции:")
-         $("#countdown").countdown({
-         date: "26 november 2018 23:59:59",
-         format: "on"
-         });
-      });
+      timer();
+      autoHeight();
     });
-</script>
+    function timer() {
+        setTimeout(function() {
+        $(".top_content").addClass("visible_timer");
+        }, 500);
+        $("#countdown").countdown({
+        date: "22 november 2018 00:00:01",
+        format: "on"
+        },
+        function() {
+          $(".time_txt").text("До окончания акции:")
+          $("#countdown").countdown({
+          date: "26 november 2018 23:59:59",
+          format: "on"
+          });
+        });
+    }
+    function autoHeight() {
+      var mh = 0;
+      $(".block_container .name").each(function () {
+        var h_block = parseInt($(this).height());
+        if(h_block > mh) {
+          mh = h_block;
+        };
+      });
+      $(".block_container .name").height(mh);
+    }
+  </script>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic&amp;subset=latin,latin-ext,cyrillic,cyrillic-ext" rel="stylesheet" type="text/css">
   <div style="display:none;">
     <div id="add_to_cart_result_area"></div>
