--- a/SHOP_dist/app/index.html
+++ b/SHOP_dist/app/index.html
@@ -196,7 +196,7 @@
         </div>
       </div>
     </div>
-    <div class="main">
+    <div class="main home">
       <div class="main_row mobile">
         <div class="slider_mobile">
           <div class="item">
@@ -1190,7 +1190,7 @@
       <div class="main_row thumbs_product">
         <div class="container">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-lg-6">
               <div class="row">
                 <div class="col-md-12">
                   <a href="#" class="picture-element item-element">
@@ -1250,7 +1250,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6">
               <div class="row">
                 <div class="col-6">
                   <a href="#" class="picture-element item-element">
@@ -1346,7 +1346,7 @@
               <div class="carousel-inner clearfix" role="listbox">
                 <div class="item active">
                   <div class="row">
-                    <div class="col-md-4 col-8">
+                    <div class="col-lg-4 col-8">
                       <div class="slider-item">
                         <a href="#"><img src="images/content/slider-item1.jpg" alt=""></a>
                         <span class="item-price">7 910 <span class="rub">руб.</span></span>
@@ -1358,7 +1358,7 @@
                         </span>
                       </div>
                     </div>
-                    <div class="col-md-2 col-4">
+                    <div class="col-lg-2 col-4">
                       <div class="slider-item">
                         <a href="#"><img src="images/content/slider-item2.jpg" alt=""></a>
                         <span class="item-price">7 910 <span class="rub">руб.</span></span>
@@ -1380,13 +1380,13 @@
                         </span>
                       </div>
                     </div>
-                    <div class="col-md-2 col-4 mobile-new-row">
+                    <div class="col-lg-2 col-4 mobile-new-row">
                       <div class="slider-item">
                         <a href="#"><img src="images/content/slider-item4.jpg" alt=""></a>
                         <span class="item-price">7 910 <span class="rub">руб.</span></span>
                       </div>
                     </div>
-                    <div class="col-md-4 col-8">
+                    <div class="col-lg-4 col-8">
                       <div class="row">
                         <div class="col-6">
                           <div class="slider-item">
