--- a/SHOP_dist/app/tails_card.html
+++ b/SHOP_dist/app/tails_card.html
@@ -1361,12 +1361,12 @@
                            <div class="table_column">
                               <div class="group">
                                  <div class="cols">
-                                    <div class="">
+                                    <div>
                                        <strong>Доставка по <a href="#">Москве</a></strong>
                                     </div>
                                  </div>
                                  <div class="cols">
-                                    <div class="">
+                                    <div>
                                        Ожидаемая дата
                                     </div>
                                     <div class="second">
