--- a/SHOP_dist/app/map.html
+++ b/SHOP_dist/app/map.html
@@ -9,22 +9,22 @@
 </head>
 
 <ul>
-	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/all-brands.html">Все бренды</a></li>
-	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/all-filters.html">Все фильтры</a></li>
-	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/brand.html">Бренд</a></li>
-	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/brand-collection.html">Бренд-коллекция</a></li>
-	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/catalogue.html">Каталог-выдача</a></li>
-	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/compare.html">Сравнение</a></li>
-	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/faves.html">Избранное</a></li>
-	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/index.html">Главная</a></li>
-	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/lc-main.html">Личный кабинет</a></li>
-	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/main-card.html">Карточка товара - основная</a></li>
-	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/tails-card.html">Карточка товара - плитка</a></li>
-	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/order.html">Заказ</a></li>
-	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/orders.html">Все заказы</a></li>
-	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/profile.html">Профиль</a></li>
-	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/search.html">Поиск</a></li>
-	<li><a href="https://ruslanmmr.github.io/SHOP_dist/app/supercategory.html">Суперкатегория</a></li>
+	<li><a target="_blank" href="https://ruslanmmr.github.io/SHOP_dist/app/all-brands.html">Все бренды</a></li>
+	<li><a target="_blank" href="https://ruslanmmr.github.io/SHOP_dist/app/all-filters.html">Все фильтры</a></li>
+	<li><a target="_blank" href="https://ruslanmmr.github.io/SHOP_dist/app/brand.html">Бренд</a></li>
+	<li><a target="_blank" href="https://ruslanmmr.github.io/SHOP_dist/app/brand-collection.html">Бренд-коллекция</a></li>
+	<li><a target="_blank" href="https://ruslanmmr.github.io/SHOP_dist/app/catalogue.html">Каталог-выдача</a></li>
+	<li><a target="_blank" href="https://ruslanmmr.github.io/SHOP_dist/app/compare.html">Сравнение</a></li>
+	<li><a target="_blank" href="https://ruslanmmr.github.io/SHOP_dist/app/faves.html">Избранное</a></li>
+	<li><a target="_blank" href="https://ruslanmmr.github.io/SHOP_dist/app/index.html">Главная</a></li>
+	<li><a target="_blank" href="https://ruslanmmr.github.io/SHOP_dist/app/lc-main.html">Личный кабинет</a></li>
+	<li><a target="_blank" href="https://ruslanmmr.github.io/SHOP_dist/app/main-card.html">Карточка товара - основная</a></li>
+	<li><a target="_blank" href="https://ruslanmmr.github.io/SHOP_dist/app/tails-card.html">Карточка товара - плитка</a></li>
+	<li><a target="_blank" href="https://ruslanmmr.github.io/SHOP_dist/app/order.html">Заказ</a></li>
+	<li><a target="_blank" href="https://ruslanmmr.github.io/SHOP_dist/app/orders.html">Все заказы</a></li>
+	<li><a target="_blank" href="https://ruslanmmr.github.io/SHOP_dist/app/profile.html">Профиль</a></li>
+	<li><a target="_blank" href="https://ruslanmmr.github.io/SHOP_dist/app/search.html">Поиск</a></li>
+	<li><a target="_blank" href="https://ruslanmmr.github.io/SHOP_dist/app/supercategory.html">Суперкатегория</a></li>
 </ul>
 
 </html>
