--- a/SHOP_dist/app/choise.html
+++ b/SHOP_dist/app/choise.html
@@ -9,7 +9,7 @@
   <meta content="telephone=no" name="format-detection">
   <link rel="stylesheet" type="text/css" href="css/libs.css" media="all">
   <link rel="stylesheet" type="text/css" href="css/common.css" media="all">
-  <link rel="stylesheet" type="text/css" href="css/about.css" media="all">
+  <link rel="stylesheet" type="text/css" href="css/choise.css" media="all">
 </head>
 
 <body class="inner_page">
@@ -1171,7 +1171,7 @@
         <div class="container">
           <ul class="holder">
             <li class="item"><a href="#"><img src="images/logo-b.svg" alt=""></a></li>
-            <li class="item">О компании</li>
+            <li class="item">Как выбрать</li>
           </ul>
         </div>
       </div>
@@ -1181,201 +1181,86 @@
             <a href="#" class="button_back">
               <i class="fas fa-angle-left"></i>
             </a>
-            <h1 class="title_general">О компании</h1>
+            <h1 class="title_general">Как выбрать</h1>
           </div>
         </div>
       </div>
-      <div class="about">
-        <div class="top-about_section">
-          <div class="container">
-            <div class="top-about_content">
-              <div class="left_content">
-                <div class="left_content_title">
-                  «Сатра» — ответственность перед клиентом
-                </div>
-                <div class="left_content_text">
-                  Мы улучшали наши услуги и совершенствовали сервисы интернет-магазина. За 10 лет в десятки раз вырос наш ассортимент. Мы создали удобную навигацию по сайту, чтобы покупателям легче было сделать единственно верный выбор; наладили доставку по всей России и в Казахстан; в помощь клиентам привлекли к сотрудничеству дизайнеров; организовали работу контакт-центра так, чтобы каждый клиент получил профессиональную консультацию в любую минуту независимо от часового пояса, в котором он живет.
-                </div>
-              </div>
-              <div class="right_content-img">
-                <img src="images/intro.png" alt="intro">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="about-pluses">
-          <div class="container">
-            <div class="about-pluses_content">
-              <div class="block">
-                <img src="images/icons/goods.svg" alt="">
-                <span class="txt">
-                  110 000 товаров
-                  <br> 600 брендов
-                </span>
-              </div>
-              <div class="block">
-                <img src="images/icons/5-min.svg" alt="">
-                <span class="txt">
-                  5 минут на обработку заказа
-                </span>
-              </div>
-              <div class="block">
-                <img src="images/icons/delivery.svg" alt="">
-                <span class="txt">
-                  Зоны льготной доставки
-                </span>
-              </div>
-              <div class="block">
-                <img src="images/icons/one-price.svg" alt="">
-                <span class="txt">
-                  Единый тариф на доставку в регионах присутствия
-                </span>
-              </div>
-              <div class="block">
-                <img src="images/icons/points.svg" alt="">
-                <span class="txt">
-                  Пункты самовывоза
-                </span>
-              </div>
-              <div class="block">
-                <img src="images/icons/24-hours.svg" alt="">
-                <span class="txt">
-                  Консультирование в режиме 24/7
-                </span>
-              </div>
-              <div class="block">
-                <img src="images/icons/service.svg" alt="">
-                <span class="txt">
-                  Служба установки и сервиса
-                </span>
-              </div>
-              <div class="block">
-                <img src="images/icons/guaranty.svg" alt="">
-                <span class="txt">
-                  Гарантия производителя, возврат, обмен
-                </span>
-              </div>
-              <div class="block">
-                <img src="images/icons/complete-solutions.svg" alt="">
-                <span class="txt">
-                  Бесплатные дизайн-решения для клиентов
-                </span>
+      <div class="choise">
+        <div class="container">
+          <div class="with_sidebar-container">
+            <div class="left_sidebar_nav">
+              <div class="left_sidebar_nav-content">
+                <ul>
+                  <li class="nav_item">
+                    <a href="#"></a>
+                    <span>Доставка</span>
+                  </li>
+                  <li class="nav_item">
+                    <a href="#"></a>
+                    <span>Оплата</span>
+                  </li>
+                  <li class="nav_item">
+                    <a href="#"></a>
+                    <span>Гарантия и возврат</span>
+                  </li>
+                  <li class="nav_item active">
+                    <a href="#"></a>
+                    <span>Как выбрать</span>
+                  </li>
+                  <li class="nav_item">
+                    <a href="#"></a>
+                    <span>Корпоративным клиентам</span>
+                  </li>
+                  <li class="nav_item">
+                    <a href="#"></a>
+                    <span>Пользовательское соглашение</span>
+                  </li>
+                </ul>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="about-information">
-          <div class="container">
-            <div class="about-information_content">
-              <div class="about-information_text">
-                <p>Мы вышли на рынок как небольшая розничная точка по продаже сантехники. Уже через два года появился сайт, а 24 мая 2010 года на santehnika-online.ru была сделана первая покупка – душевая кабина.</p>
-                <p>Мы улучшали наши услуги и совершенствовали сервисы интернет-магазина. За 10 лет в десятки раз вырос наш ассортимент. Мы создали удобную навигацию по сайту, чтобы покупателям легче было сделать единственно верный выбор; наладили доставку по всей России и в Казахстан; в помощь клиентам привлекли к сотрудничеству дизайнеров; организовали работу контакт-центра так, чтобы каждый клиент получил профессиональную консультацию в любую минуту независимо от часового пояса, в котором он живет.</p>
-                <p>Сейчас «Сантехника-Онлайн» – лидер рынка сантехнических товаров. Обращаясь к нам, можете быть уверены – мы поможем создать идеальное пространство для жизни.</p>
+            <div class="right_content-container">
+              <div class="choise_item-list">
+                <a href="choise-category.html" class="choise-item">
+                  <span class="item-content">
+                    <span class="title_section">Как выбрать унитаз</span>
+                    <span class="img_section">
+                      <img src="images/Photo_2.jpg" alt="">
+                    </span>
+                  </span>
+                </a>
+                <a href="choise-category.html" class="choise-item">
+                  <span class="item-content">
+                    <span class="title_section">Как выбрать что-нибудь</span>
+                    <span class="img_section">
+                      <img src="images/Photo_2.jpg" alt="">
+                    </span>
+                  </span>
+                </a>
+                <a href="choise-category.html" class="choise-item">
+                  <span class="item-content">
+                    <span class="title_section">Как выбрать душевую кабину</span>
+                    <span class="img_section">
+                      <img src="images/Photo_2.jpg" alt="">
+                    </span>
+                  </span>
+                </a>
+                <a href="choise-category.html" class="choise-item">
+                  <span class="item-content">
+                    <span class="title_section">Как выбрать унитаз</span>
+                    <span class="img_section">
+                      <img src="images/Photo_2.jpg" alt="">
+                    </span>
+                  </span>
+                </a>
+                <a href="choise-category.html" class="choise-item">
+                  <span class="item-content">
+                    <span class="title_section">Как выбрать унитаз</span>
+                    <span class="img_section">
+                      <img src="images/Photo_2.jpg" alt="">
+                    </span>
+                  </span>
+                </a>
               </div>
-            </div>
-          </div>
-        </div>
-        <div class="corporate_section">
-          <div class="container">
-            <div class="corporate_section-content">
-              <div class="section_decoration"></div>
-              <div class="section_container">
-                <div class="corporate_heading">
-                  <div class="top_section">
-                    <div class="left_section">
-                      <div class="title">Корпоративным клиентам</div>
-                      <div class="subtext">Для построения долгосрочных эффективных отношений «Сантехника-Онлайн» приглашает к сотрудничеству строительные и подрядные организации, дизайнеров, архитекторов.</div>
-                    </div>
-                    <div class="logo"><img src="images/logo.svg" alt="logo"></div>
-                  </div>
-                </div>
-                <div class="corporate_offer">
-                  <div class="title">
-                    Мы предлагаем
-                  </div>
-                  <div class="offer_block-content">
-                    <div class="offer-item">
-                      <h4 class="offer-item_title">Экономия времени</h4>
-                      <p class="offer-item_text">Все поставщики в одном месте – товары от экономкласса до премиум-сегмента, включая эксклюзивные товары на заказ.</p>
-                    </div>
-                    <div class="offer-item">
-                      <h4 class="offer-item_title">Специальные цены</h4>
-                      <p class="offer-item_text">Предоставим индивидуальные условия на крупные заказы.</p>
-                    </div>
-                    <div class="offer-item">
-                      <h4 class="offer-item_title">Накопительная программа</h4>
-                      <p class="offer-item_text">Гибкая система скидок для постоянных клиентов.</p>
-                    </div>
-                    <div class="offer-item">
-                      <h4 class="offer-item_title">Персональный менеджер</h4>
-                      <p class="offer-item_text">Специалисты ответят на любые вопросы в кратчайшие сроки.</p>
-                    </div>
-                    <div class="offer-item">
-                      <h4 class="offer-item_title">Оперативная доставка</h4>
-                      <p class="offer-item_text">Доставим заказ в любой регион России и в Казахстан.</p>
-                    </div>
-                  </div>
-                  <div class="button_section">
-                    <a class="corporate_link" href="#">Перейти в раздел «Корпоративным клиентам»</a>
-                  </div>
-                </div>
-                <div class="corporate_details">
-                  <div class="title">
-                    Наши реквизиты
-                    <span><i class="fas fa-angle-down"></i></span>
-                  </div>
-                  <div class="dropdown_content">
-                    <div class="corporate_details-columns">
-                    <div class="column left_section">
-                      <div class="column-details_text">
-                        <p>Общество с ограниченной<br> ответственностью<br> «Сатра»</p>
-                      </div>
-                      <div class="column-details_numbers">
-                        <span>Телефон:</span>
-                        <div class="phones_wrapper">
-                          <a href="tel:74959373867">+7 (495) 937-38-67</a>
-                          <a href="tel:74959373867">7 (495) 937-38-67</a>
-                        </div>
-                      </div>
-                      <div class="column-details_mail">
-                        <span>E-mail:</span>
-                        <a href="mailto:info@satra.ru">info@satra.ru</a>
-                      </div>
-                    </div>
-                    <div class="right_section">
-                      <div class="column">
-                        <div class="column-details_text">
-                          <p>Юридический и фактический адрес: <br>
-                            119634, Москва, ул. Новоорловская. 3а</p>
-                        </div>
-                      </div>
-                      <div class="column last">
-                        <div class="column-details_text">
-                          <p>ИНН: 5003109855<br>КПП: 500301001<br>ОГРН: 1145003001637</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="map_wrapper">
-          <iframe src="https://yandex.ua/map-widget/v1/-/CBFnvGGCxC" frameborder="1" allowfullscreen="true"></iframe>
-          <div class="b-map-office__cart u-hidden--mobile">
-            <h3 class="b-map-office__cart-title">Центральный офис «Сатра»</h3><a href="https://pp.sant-on.ru/about/#" class="b-map-office__cart-modal-close"></a>
-            <div class="b-map-office__cart-address">Москва, ул. Новоорловская. 3а</div><a class="b-map-office__cart-link-gallery"><img class="b-map-office__cart-img" src="images/about-lotos.png"></a>
-            <div class="b-map-office__cart-work"></div>
-            <div class="b-map-office__cart-phone">+7 (495) 937-38-67</div>
-            <div class="buttons">
-              <button type="button" tabindex="0">
-                Оставить отзыв
-              </button>
-              <button type="button" tabindex="0">
-                Контакты
-              </button>
             </div>
           </div>
         </div>
