--- a/SHOP_dist/app/choise.html
+++ b/SHOP_dist/app/choise.html
@@ -1192,27 +1192,27 @@
               <div class="left_sidebar_nav-content">
                 <ul>
                   <li class="nav_item">
-                    <a href="#"></a>
+                    <a href="delivery.html"></a>
                     <span>Доставка</span>
                   </li>
                   <li class="nav_item">
-                    <a href="#"></a>
+                    <a href="payment.html"></a>
                     <span>Оплата</span>
                   </li>
                   <li class="nav_item">
-                    <a href="#"></a>
+                    <a href="warranty.html"></a>
                     <span>Гарантия и возврат</span>
                   </li>
                   <li class="nav_item active">
-                    <a href="#"></a>
+                    <a href="choise-category.html"></a>
                     <span>Как выбрать</span>
                   </li>
                   <li class="nav_item">
-                    <a href="#"></a>
+                    <a href="clients.html"></a>
                     <span>Корпоративным клиентам</span>
                   </li>
                   <li class="nav_item">
-                    <a href="#"></a>
+                    <a href="agreement.html"></a>
                     <span>Пользовательское соглашение</span>
                   </li>
                 </ul>
