--- a/SHOP_dist/app/choise.html
+++ b/SHOP_dist/app/choise.html
@@ -1204,7 +1204,7 @@
                     <span>Гарантия и возврат</span>
                   </li>
                   <li class="nav_item active">
-                    <a href="choise-category.html"></a>
+                    <a href="choise.html"></a>
                     <span>Как выбрать</span>
                   </li>
                   <li class="nav_item">
@@ -1220,46 +1220,66 @@
             </div>
             <div class="right_content-container">
               <div class="choise_item-list">
-                <a href="choise-category.html" class="choise-item">
-                  <span class="item-content">
-                    <span class="title_section">Как выбрать унитаз</span>
-                    <span class="img_section">
-                      <img src="images/Photo_2.jpg" alt="">
+                <div class="choise-item">
+                  <a href="choise-category.html" class="choise-item_link">
+                    <span class="item-content">
+                      <span class="title_section">Как выбрать унитаз</span>
+                      <span class="img_section">
+                        <img src="images/Photo_2.jpg" alt="">
+                      </span>
                     </span>
-                  </span>
-                </a>
-                <a href="choise-category.html" class="choise-item">
-                  <span class="item-content">
-                    <span class="title_section">Как выбрать что-нибудь</span>
-                    <span class="img_section">
-                      <img src="images/Photo_2.jpg" alt="">
+                  </a>
+                </div>
+                <div class="choise-item">
+                  <a href="choise-category.html" class="choise-item_link">
+                    <span class="item-content">
+                      <span class="title_section">Как выбрать унитаз</span>
+                      <span class="img_section">
+                        <img src="images/Photo_2.jpg" alt="">
+                      </span>
                     </span>
-                  </span>
-                </a>
-                <a href="choise-category.html" class="choise-item">
-                  <span class="item-content">
-                    <span class="title_section">Как выбрать душевую кабину</span>
-                    <span class="img_section">
-                      <img src="images/Photo_2.jpg" alt="">
+                  </a>
+                </div>
+                <div class="choise-item">
+                  <a href="choise-category.html" class="choise-item_link">
+                    <span class="item-content">
+                      <span class="title_section">Как выбрать унитаз</span>
+                      <span class="img_section">
+                        <img src="images/Photo_2.jpg" alt="">
+                      </span>
                     </span>
-                  </span>
-                </a>
-                <a href="choise-category.html" class="choise-item">
-                  <span class="item-content">
-                    <span class="title_section">Как выбрать унитаз</span>
-                    <span class="img_section">
-                      <img src="images/Photo_2.jpg" alt="">
+                  </a>
+                </div>
+                <div class="choise-item">
+                  <a href="choise-category.html" class="choise-item_link">
+                    <span class="item-content">
+                      <span class="title_section">Как выбрать унитаз</span>
+                      <span class="img_section">
+                        <img src="images/Photo_2.jpg" alt="">
+                      </span>
                     </span>
-                  </span>
-                </a>
-                <a href="choise-category.html" class="choise-item">
-                  <span class="item-content">
-                    <span class="title_section">Как выбрать унитаз</span>
-                    <span class="img_section">
-                      <img src="images/Photo_2.jpg" alt="">
+                  </a>
+                </div>
+                <div class="choise-item">
+                  <a href="choise-category.html" class="choise-item_link">
+                    <span class="item-content">
+                      <span class="title_section">Как выбрать унитаз</span>
+                      <span class="img_section">
+                        <img src="images/Photo_2.jpg" alt="">
+                      </span>
                     </span>
-                  </span>
-                </a>
+                  </a>
+                </div>
+                <div class="choise-item">
+                  <a href="choise-category.html" class="choise-item_link">
+                    <span class="item-content">
+                      <span class="title_section">Как выбрать унитаз</span>
+                      <span class="img_section">
+                        <img src="images/Photo_2.jpg" alt="">
+                      </span>
+                    </span>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
