--- a/SHOP_dist/app/clients.html
+++ b/SHOP_dist/app/clients.html
@@ -1203,7 +1203,7 @@
                     <span>Гарантия и возврат</span>
                   </li>
                   <li class="nav_item">
-                    <a href="choise-category.html"></a>
+                    <a href="choise.html"></a>
                     <span>Как выбрать</span>
                   </li>
                   <li class="nav_item active">
