--- a/SHOP_dist/app/choise-category.html
+++ b/SHOP_dist/app/choise-category.html
@@ -9,7 +9,7 @@
   <meta content="telephone=no" name="format-detection">
   <link rel="stylesheet" type="text/css" href="css/libs.css" media="all">
   <link rel="stylesheet" type="text/css" href="css/common.css" media="all">
-  <link rel="stylesheet" type="text/css" href="css/choise.css" media="all">
+  <link rel="stylesheet" type="text/css" href="css/content.css" media="all">
 </head>
 
 <body class="inner_page">
@@ -1850,7 +1850,7 @@
     <script src="libs/jquery/dist/jquery.min.js"></script>
     <script src="js/assets.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/other.js"></script>
+    <script src="js/content.js"></script>
   </div>
 </body>
 
